# ngumpulin-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  agent-feedback.py  best_model.pkl  frontend.json  main.py  pyproject.toml
data_synthetic/: backup1.txt  data_gen.py  plagiarisme_hasil.txt
notebook/: Agentic-ai.ipynb  Pickle_Model.ipynb  backup1.ipynb  backup2.ipynb  backup3.ipynb  best_model.pkl  test.py
